# A-Differentiable-Material-Point-Method-for-Shape-Morphing

./: CMakeLists.txt
DiffMPMAnimator3D/: DiffMPMAnimator3D.cpp  MPMPointCloudVisualization.cpp  MPMPointCloudVisualization.h  MPMPolyscope.cpp  MPMPolyscope.h  MXImGuiTools.cpp  MXImGuiTools.h  MaterialPointImGui.cpp
DiffMPMLib3D/: BackPropagation.cpp  BackPropagation.h  Backprop.cu  Backprop.cuh  CMakeLists.txt  CompGraph.cpp  CompGraph.h  Elasticity.cpp  Elasticity.h  ForwardSimulation.cpp  ForwardSimulation.h  GeometryLoading.cpp  GeometryLoading.h  Grid.cpp  Grid.h  MultiThreadForwardSimulation.cpp  MultiThreadForwardSimulation.h  PointCloud.cpp  PointCloud.h  Tensor3x3x3x3.cpp  cereal_eigen.h  pch.h
PointCloudMesher/: PointCloudMesher.cpp
polyscope/: CMakeLists.txt
polyscope/include/polyscope/render/: engine.h
